--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,7 @@
         <br>
         <br>
         &nbsp;&nbsp;This site was created for use in the AWS Modern Application Workshop. <a
-            href="https://github.com/aws-samples/aws-modern-application-workshop">Please see details here.</a>
+            href="http://newmythic-loadbala-1mvvwdmkacm0w-140427978.us-west-1.elb.amazonaws.com">Please see details here.</a>
     </p>
 </body>
 <script>
